[package]
name = "voight_kampff"
homepage = "https://github.com/TQTheNeck/voight_kampff-rs"
repository = "https://github.com/TQTheNeck/voight_kampff-rs"
description = "A user agent checker"
readme = "README.md"
license = "MIT"
version = "0.1.1"
authors = ["TQ <TQTheNeck@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.4.2"
serde_json = "1.0.59"
lazy_static = "1.4.0"

